# crabs-exploration

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  conftest.py  notebook_build_ds.py  notebook_crabs_ds.py  notebook_sahi.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: linting.yml  test_and_deploy.yml  tests.yml
bash_scripts/: compute_min_max_mean_image.sh  compute_prompt_data.sh  extract_loop_end_frame.sh  extract_prompt_frames.sh  merge_zarr_datasets.sh  reencode_videos_sleap.sh  run_additional_channel.sh  run_burrow_prompts.sh  run_data_augm_sweep_array.sh  run_detect_and_track_array.sh  run_evaluate_array.sh  run_evaluate_single.sh  run_evaluation_array.sh  run_evaluation_single.sh  run_extract_loop_clips_array.sh  run_extract_prompt_frames.sh  run_frame_extraction_array.sh  run_frame_extraction_local.sh  run_frame_extraction_w_entry_points.sh  run_inference.sh  run_reencode_and_frame_extraction_array.sh  run_tracking.sh  run_tracking_all_escape_events.sh  run_training.sh  run_training_array.sh  run_training_array_subset_annotations.sh  run_training_single.sh  run_zarr_dataset.sh  run_zarr_dataset_creation.sh  run_zarr_dataset_setup.sh
bash_scripts/pose_estimation/: slurm_render.sh  slurm_train.sh
bboxes labelling/: ExtractFramesCluster.md  ManualLabellingSteps.md  additional_channels_extraction.py  extract_frames_to_label_w_sleap.py  notebook_sleap_extract_frames.py  run_frame_extraction.sh  run_frame_extraction_array.sh  run_frame_extraction_local.sh  utils.py
bboxes_labelling/: ExtractFramesCluster.md  additional_channels_extraction.py  annotations_utils.py  clip_video.py  clipping_video.py  combine_VIA_jsons.py  combine_and_format_annotations.py  combine_coco.py  combine_via_json.py  convert_coco.py  extract_frames_to_label_w_sleap.py  notebook_review_annotations.py  reencode_videos_sleap.sh  run_clip_video.sh  run_frame_extraction_array.sh  utils.py
bboxes_labelling/cluster_bash_scripts/: run_frame_extraction_array.sh  run_reencode_and_frame_extraction_array.sh
bboxes_labelling/guides/: CreateGINPrivateRepo.md  ExtractFramesCluster.md
bboxes_labelling/notebooks/: notebook_imageID_correction.py
crabs/: __init__.py  extract_loop_clips.py
crabs/bboxes_labelling/: additional_channels_extraction.py  annotations_utils.py  clip_video.py  combine_and_format_annotations.py  extract_frames_to_label_w_sleap.py  sams_great_tool.py
crabs/crabs_exploration.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crabs/dense_optical _flow/: estimate_optical_flow_on_video.py
crabs/detection/: dataloaders.py  datamodules.py  dataset.py  evaluate.py  evaluate_model.py  evaluate_utils.py  inference.py  models.py  train.py  train_model.py  visualisation.py
crabs/detection_tracking/: README.md  custom_faster_rcnn_dataset.py  datamodule.py  datamodules.py  datasets.py  detection_utils.py  evaluate.py  evaluate_model.py  evaluate_utils.py  inference_model.py  models.py  myfaster_rcnn_dataset.py  optuna.py  optuna_fn.py  optuna_utils.py  plot_track_output.py  sort.py  test_model.py  tracking_utils.py  train_model.py  visualization.py
crabs/detector/: datamodules.py  datasets.py  evaluate_model.py  models.py  train_model.py
crabs/opencv notebooks/: notebook_video_params.py
crabs/opencv_notebooks/: notebook_downsample.py  notebook_set_video_at_frame.py
crabs/stereo_calibration/: __init__.py  extract_pairs_of_frames.py
crabs/tracker/: README.md  evaluate_tracker.py  sort.py  track_video.py
crabs/tracking/: _utils.py  evaluation  evaluation.py  inference.py  sort.py  tracking.py
crabs/utils/: compute_burrow_prompt_coords.py  compute_burrow_prompt_frames.py  compute_frames_for_burrow_prompts.py  create_burrow_prompts.py  create_zarr_dataset.py  extract_frames_for_burrow_prompts.py  generate_masks_from_bboxes.py
dense optical flow/: draft_crabs.py  estimate_optical_flow_on_video.py  notebook_RAFT.py  run_RAFT_on_video.sh  run_RAFT_on_videos.sh
detection_tracking/: README.md  _inference.py  _models.py  _test.py  _utils.py  inference.py  inference_model.py  requirements.txt  sort.py  test_model.py  train_model.py
detection_tracking/config/: faster_rcnn.yaml
guides/: CorrectingTrackLabellingSteps.md  CreateGINPrivateRepo.md  CreateZarrDatasetForTracks.md  DetectAndTrackHPC.md  EvaluateModelHPC.md  EvaluatingModelsHPC.md  ExtractFramesCluster.md  ExtractLoopClipsCluster.md  InferenceModelHPC.md  ManualLabellingSteps.md  ManualLabellingSteps_dev.md  ManualLabellingSteps_general.md  TrackingModelHPC.md  TrainingModelsHPC.md  TrainingModelsLocally.md
guides/pose_estimation/: howto_training_cluster.md
notebooks/: notebook_burrow_bboxes.py  notebook_burrow_prompt_proofreading.py  notebook_burrows_sam3.py  notebook_clip_video.py  notebook_crabs_ds.py  notebook_data_augm.py  notebook_data_augm_on_dataset.py  notebook_detect_chessboard_in_sampled_frames.py  notebook_detect_chessboard_in_video.py  notebook_fix_annotations_file.py  notebook_movement_escapes.ipynb  notebook_movement_escapes.py  notebook_movement_trajectories_gt.py  notebook_napari_sam3_burrows.py  notebook_overlay_video.py  notebook_review_annotations.py  notebook_timecodes.py  notebook_trajectories_movement.py  notebook_via_csv.py  notebook_video_params.py  notebook_visualise_masks_from_zarr.py  notebook_yolo_dataset_from_zarr.py  script_opencv_video.py
notebooks/crabs_dataset/: 00_notebook_data_structure.py  01_notebook_plots.py  notebook_crabs_ds.py  (+2 more)
opencv notebooks/: notebook_clip_video.py  notebook_detect_chessboard_in_sampled_frames.py  notebook_detect_chessboard_in_video.py  notebook_downsample.py  notebook_set_video_at_frame.py  notebook_video_params.py
scripts/: escape_trajectory_plots.py  extract_clips.py  extract_loop_clips.py  output_video.py
sleap notebooks/: ffmpeg_crop.sh  ffmpeg_play_crop.sh  notebook_training_log.py
stereo calibration/: CalibrationDataCollection.md  extract_pairs_of_frames.py  notebook_timecodes.py
tests/: conftest.py  test_coco_and_via_conversions.py  test_frame_extraction.py  test_list_videos.py
(+56 files in other folders)
