[project]
name = "crabs"
authors = [
    { email = "n.aznan@ucl.ac.uk", name = "Nik Khadijah Nik Aznan" },
    { email = "s.minano@ucl.ac.uk", name = "Sofia Minano" },
]
description = "A toolkit for detecting and tracking crabs in the field."
readme = "README.md"
requires-python = ">=3.11.0"
dynamic = ["version"]

license = { text = "BSD-3-Clause" }
urls.homepage = "https://github.com/SainsburyWellcomeCentre/crabs-exploration"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "opencv-python",
    "sleap-nn",  # works with python>3.11
    "typer",
    "timecode",
    "torch",
    "torchvision",
    "pycocotools",
    "filterpy",
    "lightning==2.5.0", # see https://github.com/Lightning-AI/pytorch-lightning/pull/20669
    "mlflow",
    "optuna",
    "numpy>=2.0.0",
    "movement @ git+https://github.com/neuroinformatics-unit/movement.git@smg/parquet-bboxes",
    # Remove movement pin after PR 769 is merged
    # https://github.com/neuroinformatics-unit/movement/pull/769
    "numba>=0.60.0",
    # to avoid conflict between movement and sleap-nn;
    # numba is installed via xarray[accel] from movement
]


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "coverage",
    "tox",
    "mypy",
    "pre-commit",
    "ruff",
    "setuptools_scm",
    "check-manifest",
    "pooch",
    "tqdm",
    # "codespell",
    # "pandas-stubs",
    # "types-attrs",
    # "types-PyYAML",
    # "types-requests",
]

[project.scripts]
extract-frames = "crabs.bboxes_labelling.extract_frames_to_label_w_sleap:app_wrapper"
combine-annotations = "crabs.bboxes_labelling.combine_and_format_annotations:app_wrapper"
train-detector = "crabs.detector.train_model:app_wrapper"
evaluate-detector = "crabs.detector.evaluate_model:app_wrapper"
detect-and-track-video = "crabs.tracker.track_video:app_wrapper"
# support utils
extract-loops = "crabs.utils.extract_loop_clips:app_wrapper"
create-zarr-dataset = "crabs.utils.create_zarr_dataset:app_wrapper"

[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["crabs*"]
exclude = ["tests"]

[tool.pytest.ini_options]
addopts = "--cov=crabs"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools_scm]

[tool.check-manifest]
ignore = [
    ".yaml",
    "tox.ini",
    "tests/",
    "tests/test_unit/",
    "tests/test_integration/",
]

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
ignore = [
    "D203", # one blank line before class
    "D213", # multi-line-summary second line
]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "UP",     # pyupgrade
    "I",      # isort
    "B",      # flake8 bugbear
    "SIM",    # flake8 simplify
    "C90",    # McCabe complexity
    "D",      # pydocstyle
    "NPY201", # checks for syntax that was deprecated in numpy2.0
]
per-file-ignores = { "tests/*" = [
    "D100", # missing docstring in public module
    "D205", # missing blank line between summary and description
    "D103", # missing docstring in public function
], "examples/*" = [
    "B018", # Found useless expression
    "D103", # Missing docstring in public function
    "D400", # first line should end with a period.
    "D415", # first line should end with a period, question mark...
    "D205", # missing blank line between summary and description
] }

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings


[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312}
isolated_build = True

[gh-actions]
python =
    3.11: py311
    3.12: py312

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=crabs --cov-report=xml {posargs}
"""
# {posargs} allows parameters to get to pytest
